--- a/trunk/doc/case/case.tex
+++ b/trunk/doc/case/case.tex
@@ -18,6 +18,8 @@
 \newcommand{\note}[1]{\texttt{[#1]}}
 \newcommand{\fst}[1]{\texttt{fst}\,#1}
 \newcommand{\snd}[1]{\texttt{snd}\,#1}
+\newcommand{\inl}[1]{\texttt{inl}\,#1}
+\newcommand{\inr}[1]{\texttt{inr}\,#1}
 
 \newcommand{\comment}[1]{\textbf{[#1]}}
 
@@ -116,18 +118,18 @@ We build on the idea of \emph{typed realizability} by
 Longley~\cite{Longley00}.
 
 We briefly motivate the main idea of (typed) realizability. When we
-represent a set of mathematical objects~$S$ there are two natural
-steps to take: first choose an \emph{underlying datatype~$\ut{S}$} of
-representing values, and second specify how the values of
-type~$\ut{S}$ represent, or \emph{realize}, elements of the set~$S$.
-For example, consider how we might represent the set~$D$ of simple
-finite directed graphs (whose vertices are labeled by integers). As
-the underlying datatype we might choose $\ut{D} = \mathtt{int} \;
-\mathtt{list} * (\mathtt{int} * \mathtt{int}) \; \mathtt{list}$, and
-represent a graph~$G \in D$ as a pair of lists $(v,e)$ where $v =
-[x_1; \ldots; x_n]$ is the list of vertices and $e = [(x_{i_1},
-x_{j_1}); \ldots, (x_{i_m}, x_{j_m})]$ is the list of edges, given as
-pairs of vertices. Formally, we write
+represent a set of mathematical objects~$S$ in a programming
+language~$\PL$ there are two natural steps to take: first choose an
+\emph{underlying datatype~$\ut{S}$} of representing values, and second
+specify how the values of type~$\ut{S}$ represent, or \emph{realize},
+elements of the set~$S$. For example, consider how we might represent
+the set~$D$ of simple finite directed graphs (whose vertices are
+labeled by integers). As the underlying datatype we might choose
+$\ut{D} = \mathtt{int} \; \mathtt{list} * (\mathtt{int} *
+\mathtt{int}) \; \mathtt{list}$, and represent a graph~$G \in D$ as a
+pair of lists $(v,e)$ where $v = [x_1; \ldots; x_n]$ is the list of
+vertices and $e = [e_1; \ldots; e_m]$ is the list of edges. Formally,
+we write
 %
 \begin{equation*}
   (v, e) \rz_D G
@@ -143,8 +145,8 @@ mean that $t$ is a closed expression of type $\ut{S}$.
   A \emph{modest set}\footnote{Modest sets were so named by Dana
     Scott. They are ``modest'' because their size cannot exceed the
     number of expressions of the underlying datatype.} is a triple
-  $(S, \ut{S}, {\rz_S})$ where $S$ is a set, $\ut{|S|}$ is a type and
-  $\rz_S$ is a relation between expressions of type~$\ut{|S|}$ and
+  $(S, \ut{S}, {\rz_S})$ where $S$ is a set, $\ut{S}$ is a type and
+  $\rz_S$ is a relation between expressions of type~$\ut{S}$ and
   elements of~$S$, satisfying:
   % 
   \begin{enumerate}
@@ -161,58 +163,103 @@ mean that $t$ is a closed expression of type $\ut{S}$.
     t \rz_S x \implies u\,t \rz_T f(x) \;.
   \end{equation*}
   %
-  We say that $u$ \emph{realizes} the function~$f$.
+  We say that $u$ \emph{realizes}~$f$.
 \end{definition}
 
-The realizer~$u$ of a realized function~$f$ is what programmers would
-call an ``implementation of~$f$'' or an ``algorithm for
-computing~$f$''.
+The realizer~$u$ of a realized function~$f$ is more commonly known as
+an ``implementation of~$f$'' or an ``algorithm for computing~$f$''.
 
 Modest sets and realized functions form a category of \emph{modest
   sets~$\Mod{\PL}$}. In realizability theory this is a well known
 category with good properties. It is regular and locally cartesian
 closed, which allows us to interpret first-order logic and a rich type
-theory. Here we only outline how first-order logic is interpreted, see
-e.g.~\cite{Bauer:00} for details.  \comment{CAS: Everything before was
-  very good for the PL folk.  But this is going to lose people --- 
-  instead of realizing abstract data types, you're suddenly
-  talking about realizers for logical formulas, and it's not
-  obvious what it would mean to ``implement'' a formula.  We don't have
-  to give full details yet, but some intuition would be really quite helpful.}
-Each first-order formula~$\phi$ has
-an underlying type~$\ut{\phi}$ of realizers and a realizability
-relation~$\rz$. The type~$\ut{\phi}$ and~$\rz$ are defined inductively
-on the structure of the formula. For example, realizers for
-conjunction and implication are defined as follows:
-%
-\begin{align*}
-  \ut{\phi \land \psi} &= \ut{\phi} * \ut{\psi} \\
-  \ut{\phi \implies \psi} &= \ut{\phi} \to \ut{\psi} \\
-  t \rz \phi \land \psi &\iff \text{$\fst{t} \rz \phi$ and $\snd{t} \rz
-    \psi$} \\
-  u \rz \phi \implies \psi &\iff \text{if $t \rz \phi$ then $u\,t \rz
-    \psi$}
-  \;.
-\end{align*}
-%
+theory. Here we only outline the main ideas behind the realizability
+interpretation of logic. See e.g.~\cite{Bauer:00} for details.
+
+In the realizability interpretation of logic, each formula~$\phi$ is
+assigned a set of \emph{realizers} which can be thought of as
+computations that witness the validity of~$\phi$. The situation is
+somewhat similar (but not equivalent) to the propositions-as-types
+translation of logic into type theory, where the proofs of a
+proposition correspond to terms of the corresponding type. More
+precisely, to each formula~$\phi$ we assign an underlying type
+$\ut{\phi}$ of realizers. However, unlike in the propositions-as-types
+translation, not all terms of type $\ut{\phi}$ are necessarily valid
+realizers for~$\phi$. We write $t \rz \phi$ when $t \in \ut{\phi}$ is
+in fact a realizer for~$\phi$. The underlying types and the
+realizability relation~$\rz$ are defined inductively on the structure
+of~$\phi$, see the outline in Figure~\ref{fig:rz-logic}. We say that a
+formula~$\phi$ is \emph{valid} in~$\Mod{\PL}$ if it has at least one
+realizer.
+
+\begin{figure*}
+  \centering
+  \parbox[t]{0.35\textwidth}{
+    \begin{align*}
+      \ut{\top} &= \mathtt{unit} \\
+      \ut{\bot} &= \mathtt{void} \\
+      \ut{x =_S y} &= \mathtt{unit} \\
+      \ut{\phi \land \psi} &= \ut{\phi} * \ut{\psi} \\
+      \ut{\phi \implies \psi} &= \ut{\phi} \to \ut{\psi} \\
+      \ut{\phi \lor \psi} &= \ut{\phi} + \ut{\psi} \\
+      \ut{\forall x \in A .\, \phi(x)} &= \ut{A} \to \ut{\phi} \\
+      \ut{\exists x \in A .\, \phi(x)} &= \ut{A} \times \ut{\phi}
+    \end{align*}
+  }
+  \quad
+  \parbox[t]{0.5\textwidth}{
+    \begin{align*}
+      () \rz \top &
+      \\
+      () \rz x =_S y
+        &\quad\text{iff}\quad 
+      x \per{S} y
+      \\
+      (t_1,t_2) \rz \phi \land \psi
+        &\quad\text{iff}\quad
+        \text{$t_1 \rz \phi$ and $t_2 \rz \psi$}
+      \\
+      t \rz \phi \implies \psi
+        &\quad\text{iff}\quad
+        \text{for all $u \in \ut{\phi}$, if $u \rz \phi$ then $t\,u
+          \rz \psi$}
+      \\
+      \inl{t} \rz \phi \lor \psi
+        &\quad\text{iff}\quad
+        \text{$t \rz \phi$}
+      \\
+      \inr{t} \rz \phi \lor \psi
+        &\quad\text{iff}\quad
+        \text{$t \rz \psi$}
+      \\
+      t \rz \forall x \in A . \phi(x)
+        &\quad\text{iff}\quad
+        \text{for all $u \in \ut{A}$, if $u \rz_A x$ then $t\,u \rz \phi(x)$}
+      \\
+      (t_1, t_2) \rz \exists x \in A . \phi(x)
+        &\quad\text{iff}\quad
+        \text{$t_1 \rz_A x$ and $t_2 \rz \phi(x)$}
+    \end{align*}
+  }
+  \caption{Outline of realizability interpretation of logic}
+  \label{fig:rz-logic}
+\end{figure*}
+
 We shall not dwell any further on the technicalities involving the
 category of modest sets, but rather proceed to a concrete description
-of our realizability translation.
-
-There is one technical point, though, which we first take care of. A
-modest set is a triple $(S, \ut{S}, {\rz_S})$ in which~$S$ is an
-arbitrary set. For an automated system it would be convenient if it
-did not have to refer to arbitrary sets but rather just to ingredients
-that are already present in the programming language, such as types
-and sets of expressions. Up to isomorphism, a modest set can be
-construed as a triple $(\ut{S}, \tot{S}, {\per{S}})$ where $\ut{S}$ is
-a type, $\tot{S}$ is a subset of expressions of type~$\ut{S}$, called
-the \emph{total values},\footnote{We do \emph{not} require that a
-  total value must be a terminating expression.} and $\per{S}$ is an
-equivalence relation on~$\ut{S}$.  \comment{Shouldn't this be ``an
-  equivalence relation on $\tot{S}$?  Otherwise, it would be a PER.}
-The relationship between this representation of a modest set and the
-original one is as follows:
+of our realizability translation. There is one technical point,
+though, which we first take care of. A modest set is a triple $(S,
+\ut{S}, {\rz_S})$ in which~$S$ is an arbitrary set. For an automated
+system it would be convenient if it did not have to refer to arbitrary
+sets but rather just to ingredients that are already present in the
+programming language, such as types and sets of expressions. Up to
+equivalence of categories, modest sets can be construed as triples
+$(\ut{S}, \tot{S}, {\per{S}})$ where $\ut{S}$ is a type, $\tot{S}$ is
+a subset of expressions of type~$\ut{S}$, called the \emph{total
+  values},\footnote{We do \emph{not} require that a total value must
+  be a terminating expression.} and $\per{S}$ is an equivalence
+relation on~$\tot{S}$. The relationship between this representation of
+a modest set and the original one is as follows:
 %
 \begin{itemize}
 \item $\tot{S}$ is the set of those expressions $t \in \ut{S}$ that
@@ -233,92 +280,92 @@ modest sets are in fact equivalent to PER models.
 \section{Theories and Signatures}
 \label{sec:theories-signatures}
 
-Explain the basic setup:
-%
-\begin{itemize}
-\item a set is interpreted as a modest set
-\item the realizers of a first-order sentence (closed formula) are
-  interpreted as certain expressions of a suitable type.
-\end{itemize}
-
-Next level:
-%
-\begin{itemize}
-\item a first-order theory is given by a signature for sets and
-  constants of specified types together with axioms.
-\item such a first-order theory may be translated to a signature:
-  set is translated to a modest set, constant is translated to a total
-  value satisfying some assertion, axiom is translated to a realizer
-  of a suitable type satisfying some assertion.
-\end{itemize}
-
-Then go on to explaining what theories and signatures are.
+In this section we describe first-order theories and signatures.
+Our system translates the former into the later.
 
 \subsection{Theories}
 \label{sec:theories}
 
-In its simplest form a theory is a specification of what must exist
-(sets, constants, and relations).  A typical theory definition looks like
+A \emph{theory} is a description of a mathematical structure, such as
+a group, a vector space, a directed graph, etc. A theory consists of
+%
+\begin{itemize}
+\item a list of \emph{basic sets},
+\item a list of \emph{basic constants} belonging to specified sets,
+\item a list of \emph{basic relations} on specified sets,
+\item a list of axioms.
+\end{itemize}
+%
+To take a simple example, consider the theory~$T$ of a semigroup in
+which every element has a (possibly non-unique) square root; recall
+that a semigroup is a set with an associative binary operation and a
+neutral element.\footnote{An example of such a semigroup are the
+  complex numbers with multiplication as the binary operation.} In our
+system it could be written as follows:
+%
 \begin{Verbatim}
-theory Group =
+theory T =
 thy
-  set g  
-
-  const e     : g
-  const ( * ) : g -> g -> g
-  const i     : g -> g
-
-  implicit x,y,z : g
-
+  set s
+  const e : s
+  const ( * ) : s -> s -> s
+  implicit x, y, z : s
   axiom unit x =
-    e * x = x and x * e = x
-
-  axiom associative x y z =
-    (x * y) * z = x * (y * z)
-
-  axiom inverse x =
-    x * (i x) =  e and (i x) * x = e
-end  
+    x * e = x and e * x = x
+  axiom assoc x y z =
+    x * (y * z) = (x * y) * z
+  axiom sqrt x =
+    some y . y * y = x
+end
 \end{Verbatim}
-The theory is enclosed by \Verb|thy|\ldots\Verb|end|.  This theory
-defines a set \Verb|g|, and three constants: an element \Verb|e| of
-\Verb|g|, a (curried) binary infix operator \Verb|*| on the set
-\Verb|g|, and a mapping \Verb|i|.  The \Verb|implicit| operator is not
-part of the theory proper, but signals to the type checker that all
-bound variables named \Verb|x| or \Verb|y| or \Verb|z| should be
-assumed to range over elements in \Verb|g| unless otherwise specified.
-Finally, we have three axioms.  Axiom arguments (the single argument
-\Verb|x| in the case of the \Verb|unit| axiom, and the three arguments
-\Verb|x|, \Verb|y|, and \Verb|z|) are essentially universally
-quantified in the following proposition.  \comment{Or is there a subtle difference I'm missing?}
+%
+The theory is enclosed by \Verb|thy|\ldots\Verb|end|. This theory
+defines one basic set \Verb|s|, and two basic constants: an element
+\Verb|e| of \Verb|s|, a (curried) binary infix operator \Verb|*| on
+the set \Verb|s|. The \Verb|implicit| operator is not part of the
+theory proper, but signals to the type checker that all bound
+variables named \Verb|x| or \Verb|y| or \Verb|z| should be assumed to
+range over elements in \Verb|s| unless otherwise specified. Finally,
+we have three axioms. Axiom arguments, e.g., \Verb|x|, \Verb|y|, and
+\Verb|z| in the associativity axiom, name the free variables occuring
+in the axiom. It is not too big a mistake to think of them as being
+universally quantified.
 
 It is important to note that theories do not include proofs, but
-rather just the statement of the axiom (or theorem) specified to hold.
-Thus although axioms can be defined, one cannot actually refer to
-the axioms within the theory.
+rather just the statements of the axioms (and theorems) specified to
+hold. Thus although axioms can be defined, one cannot actually refer
+to them within the theory.
 
-Features of theories not shown in this example include:
+There are several features of theories that our system supports other
+than those shown in this example above:
+%
 \begin{itemize}
-\item A theory can describe predicates
-  or more general relations.  These can be declared 
-  \Verb|stable| \comment{meaning...} .  Stable binary relations can be 
-  declared to be equivalence relations.
-\item The language of sets includes cartesian product, disjoint
-  unions, subsets ($\{x\in S | \phi(x)\}$), 
-  equivalence classes ($S/\cong$), and sets of realizers.  The
-  corresponding introduction and elimination forms appear in
-  the language of terms.
-\item Constants, sets, and relations can all be defined in the theory;
-  these serve as abbreviations to allow more concise specifications.
-  For example, a theory might want to give a name to the set of 
-  non-zero numbers.
-\item A theory can postulate the existance of a model of some
+\item
+  As already mentioned, a theory may list basic predicates and relations.
+  These can be declared \Verb|stable|, which means that their
+  computational interpretation is trivial, see
+  Section~\ref{sec:real-transl} for further discussion of this point.
+  %
+\item The language of sets includes cartesian product, function
+  spaces, disjoint unions, subsets, quotients by stable equivalence
+  relations, and sets of realizers. The corresponding introduction and
+  elimination forms appear in the language of terms.
+
+\item Convenient abbreviations may be defined for constants sets and
+  relations. For example, a theory might want to give a name to the
+  set of non-zero numbers.
+
+\item A theory can postulate the existence of a model of some
   theory.  For example, a theory of real numbers could start by
   postulating a model \Verb|N| of the theory \Verb|Nat| of natural
   numbers.
+
 \item Axioms can universally quantify over all models of a theory.
-  This is useful for describing initiality properties.
-\item Comments
+  This is useful for describing universaility properties, such as
+  initiality of an algebra or finality of a coalgebra.
+
+\item Comments may be included in the theory.
+
 \end{itemize}
 
 \comment{Really, I should create a figure containing the abstract syntax.}
@@ -395,10 +442,8 @@ end
 Mention that we can handle parameterized theories and functor
 signatures, but avoid explaining everything about them.
 
-\subsection{Implementation}
-
-\comment{Perhaps \emph{Implementation} should be the next section, of which
-\emph{The Realizibility Translation} is the biggest subsection?}
+\section{Implementation}
+\label{sec:impliementation}
 
 After parsing, our implementation does type checking.  The type
 checker does rather limited type reconstruction; the types of all
@@ -421,10 +466,8 @@ peephole simplifications of the resulting signature. \comment{give example!}
 \comment{I could say more about the typechecker and the optimizer, but
   I'm not sure this audience would care much.}
 
-\section{The Realizability Translation}
-\label{sec:real-transl}
-
 Here we provide more details about the translation.
+
 
 \section{Examples}
 \label{sec:examples}
