*** empty log message ***

--- a/trunk/doc/case/case.bib
+++ b/trunk/doc/case/case.bib
@@ -68,3 +68,35 @@
    pages =   {205-232}
 }
 		  
+@INPROCEEDINGS{harper+:popl90,
+   AUTHOR="Robert Harper and John C. Mitchell and Eugenio Moggi",
+   TITLE="{Higher-order Modules and the Phase Distinction}",
+   BOOKTITLE= "Proc. 17th ACM Symposium on Principles of 
+                  Programming Languages (POPL '90)",
+   YEAR=1990,
+   PAGES="341--354"}
+
+@BOOK{milner+:definition,
+      AUTHOR="Robin Milner and Mads Tofte and Robert Harper
+              and Dave MacQueen",
+      TITLE="{The Definition of {Standard ML} (Revised)}",
+      YEAR="1997",
+      PUBLISHER="{MIT Press}"}
+
+@incollection{    automath,
+author =          "Nicolas G. de Bruijn",
+title =           "A survey of the project {AUTOMATH}",
+booktitle =       "To H. B. Curry: Essays in Combinatory Logic, Lambda
+                  Calculus, and Formalism",
+editor =          "J. P. Seldin and J. R. Hindley",
+publisher =       "Academic Press",
+year =            1980,
+pages =           "589--606"
+}
+
+@TECHREPORT{ocaml,
+AUTHOR="Xavier Leroy and Damien Doligez and Jacques Garrigue and Didier R\'emy and and J\'er\^ome Vouillon",
+TITLE="The Objective Caml system, documentation and user's manual - release 3.08",
+INSTITUTION="INRIA",
+MONTH="July",
+YEAR="2004"}
